--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 Django==1.7.7
+Markdown==2.6.1
 dj-database-url==0.3.0
 dj-static==0.0.6
+django-filter==0.9.2
 django-toolbelt==0.0.1
+djangorestframework==3.1.0
 gunicorn==19.3.0
 psycopg2==2.6
 static3==0.5.1
